--- a/src/components/User.module.css
+++ b/src/components/User.module.css
@@ -1,34 +1,44 @@
 .user {
   position: absolute;
-  top: 4.2rem;
-  right: 4.2rem;
+  top: 2rem;
+  right: 2rem;
   background-color: var(--color-dark--1);
-  padding: 1rem 1.4rem;
+  padding: 1rem 1.2rem;
   border-radius: 7px;
   z-index: 999;
-  box-shadow: 0 0.8rem 2.4rem rgba(36, 42, 46, 0.5);
+  box-shadow: 0 0.8rem 2.4rem rgba(36, 42, 46, 0.6);
   font-size: 1.6rem;
   font-weight: 600;
-
   display: flex;
   align-items: center;
-  gap: 1.6rem;
+  gap: 1.2rem;
 }
 
 .user img {
   border-radius: 100px;
-  height: 4rem;
+  height: 3rem;
+}
+
+.user span {
+  font-size: 1.2rem;
 }
 
 .user button {
   background-color: var(--color-dark--2);
-  border-radius: 7px;
+  border-radius: 10px;
   border: none;
-  padding: 0.6rem 1.2rem;
+  padding: 0.5rem 1rem;
   color: inherit;
   font-family: inherit;
   font-size: 1.2rem;
   font-weight: 700;
   text-transform: uppercase;
   cursor: pointer;
+  transition: all 0.4s ease-in-out;
+}
+
+.user button:hover {
+  background-color: var(--color-bg--1);
+  color: var(--color-dark--0);
+  box-shadow: 0 0 1rem var(--color-light--1);
 }
