Added HiXMark icon btn to Sidebar comp

--- a/src/pages/AppLayout.module.css
+++ b/src/pages/AppLayout.module.css
@@ -1,7 +1,7 @@
 .app {
   height: 100vh;
   padding: 0.5rem;
-  overscroll-behavior: none;
+  overscroll-behavior-y: none;
   display: flex;
   position: relative;
 }
