--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -1,9 +1,38 @@
+.sidebar-open .sidebar {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+  transform: translateX(0);
+}
+
 .sidebar {
-  flex-basis: 56rem;
+  /* flex-basis: 56rem; */
+  width: 50rem;
   background-color: var(--color-dark--1);
   padding: 3rem 5rem 3.5rem 5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   height: calc(100vh - 1rem);
+}
+
+.sidebar-icon {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.sidebar-icon svg {
+  width: 2rem;
+  height: 2rem;
+  color: var(--color-light--3);
+  transition: all 0.3s ease-in-out;
+}
+
+.sidebar-icon svg:hover {
+  color: var(--color-brand--2);
+  transform: scale(1.4);
 }
