--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -9,11 +9,20 @@
   /* flex-basis: 56rem; */
   width: 50rem;
   background-color: var(--color-dark--1);
-  padding: 3rem 5rem 3.5rem 5rem;
+  padding: 3rem 4rem 3.5rem 4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   height: calc(100vh - 1rem);
+  z-index: 1000;
+  position: absolute;
+  top: 0.5rem;
+  left: 0.5rem;
+  transform: translateX(-100%);
+  transition: all 0.3s ease-in-out;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
 
 .sidebar-icon {
