--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -24,12 +24,12 @@
   justify-content: space-between;
 }
 
-.flag {
+.form-flag {
   position: absolute;
-  right: 1.5rem;
-  top: 3.2rem;
-  font-size: 2rem;
-  color: var(--color-dark--0);
+  right: 1rem;
+  top: 3.8rem;
+  max-height: 2.3rem;
+  height: 2.3rem;
 }
 
 .form.loading {
