--- a/src/components/CityItem.module.css
+++ b/src/components/CityItem.module.css
@@ -18,9 +18,9 @@
   border-left: 5px solid var(--color-brand--2);
 }
 
-.emoji {
-  font-size: 2.2rem;
-  line-height: 1;
+.cityItem-emojiFlag {
+  height: 2.3rem;
+  max-height: 2.3rem;
 }
 
 .name {
