--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -26,9 +26,11 @@
   position: absolute;
   z-index: 1000;
   font-size: 1.4rem;
-  bottom: 4rem;
-  left: 50%;
-  transform: translateX(-50%);
+  top: 8rem;
+  right: 2rem;
+  /* bottom: 4rem; */
+  /* left: 50%;
+  transform: translateX(-50%); */
   background-color: var(--color-brand--2);
   color: var(--color-dark--1);
   box-shadow: 0 0.4rem 1.2rem rgba(36, 42, 46, 0.16);
