--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -45,3 +45,27 @@
   color: var(--color-brand--2);
   transform: scale(1.4);
 }
+
+@media (max-width: 64em) {
+  .sidebar {
+    top: 0;
+    left: 0;
+    height: 100%;
+  }
+}
+
+@media (max-width: 42em) {
+  .sidebar {
+    width: 100%;
+    height: 65%;
+    transform: translateY(100%);
+  }
+
+  .sidebar a {
+    display: none;
+  }
+
+  .sidebar-open .sidebar {
+    transform: translateY(54%);
+  }
+}
