--- a/src/index.css
+++ b/src/index.css
@@ -69,3 +69,14 @@ input:focus {
   padding: 1rem 3rem;
   border-radius: 5px;
 }
+
+@media (max-width: 64em) {
+  html {
+    font-size: 56.25%;
+  }
+}
+@media (max-width: 42em) {
+  html {
+    font-size: 50%;
+  }
+}
