--- a/src/components/PageNav.module.css
+++ b/src/components/PageNav.module.css
@@ -35,3 +35,54 @@ a.ctaLink:visited {
   padding: 0.8rem 2rem;
   border-radius: 7px;
 }
+
+.nav-icon {
+  border: none;
+  background: none;
+  cursor: pointer;
+  z-index: 1000;
+  display: none;
+}
+
+.nav-icon svg {
+  width: 4rem;
+  height: 4rem;
+  color: var(--color-light--2);
+}
+
+@media (max-width: 42em) {
+  .nav ul {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    transform: translateX(100%);
+    background-color: rgba(60, 70, 75, 0.8);
+    backdrop-filter: blur(5px);
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 5rem;
+    transition: all 0.5s ease-in-out;
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+  }
+
+  .nav-open .nav ul {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+    transform: translateX(0);
+  }
+
+  .nav a:link,
+  .nav a:visited {
+    font-size: 3rem;
+  }
+
+  .nav-icon {
+    display: block;
+  }
+}
