--- a/src/pages/Product.module.css
+++ b/src/pages/Product.module.css
@@ -32,3 +32,27 @@
 .product section a {
   margin-top: 2rem;
 }
+
+@media (max-width: 64em) {
+  .product {
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+  }
+}
+
+@media (max-width: 42em) {
+  .product section {
+    width: 100%;
+    grid-template-columns: 1fr;
+    gap: 5rem;
+    justify-items: center;
+  }
+  .product h2 {
+    font-size: 2.5rem;
+    text-align: center;
+  }
+  .product section img {
+    width: 65%;
+  }
+}
