Added media queries prop style for Login page comp

--- a/src/pages/Login.module.css
+++ b/src/pages/Login.module.css
@@ -24,3 +24,10 @@
   flex-direction: column;
   gap: 0.5rem;
 }
+
+@media (max-width: 42em) {
+  .login {
+    margin: 0;
+    height: 100vh;
+  }
+}
