--- a/src/components/PageNav.module.css
+++ b/src/components/PageNav.module.css
@@ -34,6 +34,16 @@ a.ctaLink:visited {
   color: var(--color-dark--0);
   padding: 0.8rem 2rem;
   border-radius: 7px;
+  border: none;
+  transition: all 0.4s ease-in-out;
+}
+
+a.ctaLink:link:hover,
+a.ctaLink:visited:hover {
+  background-color: var(--color-dark--0);
+  color: var(--color-brand--1);
+  box-shadow: 0 0 1.5rem var(--color-brand--1);
+  transition: all 0.4s ease-in-out;
 }
 
 .nav-icon {
