--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -13,6 +13,14 @@
   font-weight: 700;
   background-color: var(--color-brand--2);
   color: var(--color-dark--1);
+  transition: all 0.4s ease-in-out;
+}
+
+.primary:hover {
+  background-color: var(--color-dark--0);
+  color: var(--color-brand--1);
+  box-shadow: 0 0 1.5rem var(--color-brand--1);
+  transition: all 0.4s ease-in-out;
 }
 
 .back {
