--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -29,21 +29,25 @@
   position: absolute;
   top: 1rem;
   right: 1rem;
+  padding: 0.5rem;
+  text-align: center;
+  border-radius: 1.5rem;
+  color: var(--color-light--2);
   border: none;
-  background: none;
+  background-color: var(--color-dark--0);
   cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.sidebar-icon:hover {
+  background-color: var(--color-brand--1);
+  color: var(--color-dark--0);
+  transition: all 0.3s ease-in-out;
 }
 
 .sidebar-icon svg {
   width: 2rem;
   height: 2rem;
-  color: var(--color-light--3);
-  transition: all 0.3s ease-in-out;
-}
-
-.sidebar-icon svg:hover {
-  color: var(--color-brand--2);
-  transform: scale(1.4);
 }
 
 @media (max-width: 64em) {
