--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -7,6 +7,7 @@
 
 .sidebar {
   /* flex-basis: 56rem; */
+  /* position: absolute; */
   width: 50rem;
   background-color: var(--color-dark--1);
   padding: 3rem 4rem 3.5rem 4rem;
@@ -15,7 +16,6 @@
   align-items: center;
   height: calc(100vh - 1rem);
   z-index: 1000;
-  position: absolute;
   top: 0.5rem;
   left: 0.5rem;
   transform: translateX(-100%);
@@ -23,6 +23,10 @@
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+}
+
+.sidebar-absolute {
+  position: absolute;
 }
 
 .sidebar-icon {
