--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -65,7 +65,6 @@
 @media (max-width: 42em) {
   .sidebar {
     width: 100%;
-    height: 65%;
     transform: translateY(100%);
   }
 
@@ -73,7 +72,7 @@
     display: none;
   }
 
-  .sidebar-open .sidebar {
+  /* .sidebar-open .sidebar {
     transform: translateY(54%);
-  }
+  } */
 }
