--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -10,7 +10,7 @@
   /* position: absolute; */
   width: 50rem;
   background-color: var(--color-dark--1);
-  padding: 3rem 4rem 3.5rem 4rem;
+  padding: 3rem 4rem 3.5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -65,6 +65,7 @@
 @media (max-width: 42em) {
   .sidebar {
     width: 100%;
+    padding: 3rem 4rem 6.5rem;
     transform: translateY(100%);
   }
 
