Update height for siderbar cls in Sidebar module for media queries

--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -19,10 +19,10 @@
   top: 0.5rem;
   left: 0.5rem;
   transform: translateX(-100%);
-  transition: all 0.3s ease-in-out;
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+  transition: all 0.3s ease-in-out;
 }
 
 .sidebar-absolute {
@@ -64,8 +64,9 @@
 
 @media (max-width: 42em) {
   .sidebar {
-    width: 100%;
-    padding: 3rem 4rem 6.5rem;
+    height: 55vh;
+    padding: 3rem 4rem 2rem;
+    overflow-y: auto;
     transform: translateY(100%);
   }
 
