--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,8 @@ body {
   font-weight: 400;
   line-height: 1.6;
   background-color: var(--color-bg--1);
-  overflow: hidden;
+  /* overflow: hidden; */
+  overflow-y: scroll;
 }
 
 label {
