--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -64,7 +64,8 @@
 
 @media (max-width: 42em) {
   .sidebar {
-    height: 55vh;
+    width: 100%;
+    height: 50vh;
     padding: 3rem 4rem 2rem;
     overflow-y: auto;
     transform: translateY(100%);
