--- a/src/index.css
+++ b/src/index.css
@@ -34,8 +34,7 @@ body {
   font-weight: 400;
   line-height: 1.6;
   background-color: var(--color-bg--1);
-  /* overflow: hidden; */
-  overflow-y: scroll;
+  overflow: hidden;
 }
 
 label {
