--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -27,6 +27,14 @@
   font-weight: 600;
   background: none;
   border: 1px solid currentColor;
+  transition: all 0.4s ease-in-out;
+}
+.back:hover {
+  color: var(--color-brand--2);
+  border: 1px solid var(--color-brand--2);
+  background-color: var(--color-dark--0);
+  box-shadow: 0 0 1.5rem var(--color-bg--1);
+  transition: all 0.4s ease-in-out;
 }
 
 .position {
