--- a/src/components/PageNav.module.css
+++ b/src/components/PageNav.module.css
@@ -18,6 +18,18 @@
   text-transform: uppercase;
   font-size: 1.5rem;
   font-weight: 600;
+  padding: 0.8rem 2rem;
+  border-radius: 7px;
+  border: 1px solid transparent;
+  transition: all 0.4s ease-in-out;
+}
+
+.nav a:link:hover,
+.nav a:visited:hover {
+  padding: 0.8rem 2rem;
+  border-radius: 7px;
+  border: 1px solid var(--color-brand--2);
+  transition: all 0.4s ease-in-out;
 }
 
 /* CSS Modules feature */
