--- a/src/components/PageNav.module.css
+++ b/src/components/PageNav.module.css
@@ -18,14 +18,16 @@
   text-transform: uppercase;
   font-size: 1.5rem;
   font-weight: 600;
+}
+
+.nav-a-hovering {
   padding: 0.8rem 2rem;
   border-radius: 7px;
   border: 1px solid transparent;
   transition: all 0.4s ease-in-out;
 }
 
-.nav a:link:hover,
-.nav a:visited:hover {
+.nav-a-hovering:hover {
   padding: 0.8rem 2rem;
   border-radius: 7px;
   border: 1px solid var(--color-brand--2);
