--- a/src/components/PageNav.module.css
+++ b/src/components/PageNav.module.css
@@ -52,6 +52,14 @@ a.ctaLink:visited {
   transition: all 0.4s ease-in-out;
 }
 
+a.ctaLink:link:global(.active),
+a.ctaLink:visited:global(.active) {
+  background-color: var(--color-dark--0);
+  color: var(--color-brand--1);
+  box-shadow: 0 0 1.5rem var(--color-brand--1);
+  transition: all 0.4s ease-in-out;
+}
+
 a.ctaLink:link:hover,
 a.ctaLink:visited:hover {
   background-color: var(--color-dark--0);
