Added box-shadow prop to user img in User module

--- a/src/index.css
+++ b/src/index.css
@@ -2,20 +2,14 @@
 @import "https://unpkg.com/leaflet@1.9.4/dist/leaflet.css";
 @import "https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap";
 
-/* These CSS variables are global, so they are available in all CSS modules */
+/* CSS global variables are available in all CSS modules */
 :root {
-  /* --color-bg--1: #ace1af; */
   --color-bg--1: #52b788;
-  /* --color-brand--1: #ffb545; */
   --color-brand--1: #fec89a;
   --color-brand--2: #00c46a;
-
   --color-dark--0: #2f3e46;
   --color-dark--1: #354f52;
   --color-dark--2: #52796f;
-  /* --color-dark--0: #242a2e;
-  --color-dark--1: #2d3439;
-  --color-dark--2: #42484d; */
   --color-light--1: #aaa;
   --color-light--2: #ececec;
   --color-light--3: #d6dee0;
