--- a/src/components/User.module.css
+++ b/src/components/User.module.css
@@ -6,7 +6,7 @@
   padding: 1rem 1.2rem;
   border-radius: 7px;
   z-index: 999;
-  box-shadow: 0 0.8rem 2.4rem rgba(36, 42, 46, 0.6);
+  box-shadow: 0 1rem 2rem rgba(47, 62, 70, 0.8);
   font-size: 1.6rem;
   font-weight: 600;
   display: flex;
@@ -17,6 +17,7 @@
 .user img {
   border-radius: 100px;
   height: 3rem;
+  box-shadow: 0 0 0.5rem var(--color-light--1);
 }
 
 .user span {
