--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -44,12 +44,10 @@
   font-size: 1.4rem;
   top: 8rem;
   right: 2rem;
-  /* bottom: 4rem; */
-  /* left: 50%;
-  transform: translateX(-50%); */
   background-color: var(--color-brand--2);
   color: var(--color-dark--1);
   box-shadow: 0 0.4rem 1.2rem rgba(36, 42, 46, 0.16);
+  transition: all 0.4s ease-in-out;
 }
 
 .position:hover {
