Added LogoSmallScreen comp to Map comp

--- a/src/components/LogoSmallScreen.module.css
+++ b/src/components/LogoSmallScreen.module.css
@@ -1,3 +1,11 @@
-.logo {
+.logo-container {
+  position: absolute;
+  left: 1rem;
+  top: 3rem;
+  display: block;
+  z-index: 1001;
+}
+
+.logo-container .logo {
   height: 3rem;
 }
